# wagtail-polymath

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
tests/: settings.py
wagtail_polymath/: apps.py  blocks.py  conf.py  wagtail_hooks.py
wagtail_polymath/templatetags/: wagtail_polymath.py
