[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wagtail-polymath"
description = "Math typesetting for Wagtail CMS powered by KaTeX"
authors = [
    {name = "ongchi", email = "ongchi@users.noreply.github.com"},
]
dependencies = [
    "wagtail>=3",
]
requires-python = ">=3.6"
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 3",
    "Framework :: Wagtail :: 4",
    "Framework :: Wagtail :: 5",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/wagtail-nest/wagtail-polymath"
"Bug Tracker" = "https://github.com/wagtail-nest/wagtail-polymath/issues"

[tool.setuptools]
packages = ["wagtail_polymath"]

[tool.setuptools.dynamic]
version = {attr = "wagtail_polymath.__version__"}

[tool.black]
skip_string_normalization = true
