[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wagtail-polymath"
authors = [
    {name = "Wagtail Nest contributors", email = "hello@wagtail.org"},
]
description = "Math typesetting for Wagtail CMS"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 3",
    "Framework :: Wagtail :: 4",
    "Framework :: Wagtail :: 5",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.6"
dynamic = ["version"]
dependencies = [
    "wagtail>=3",
]
testing = [
    "dj-database-url==2.1.0",
    "pre-commit==3.4.0"
]
ci = [
    "tox==4.11.3",
    "tox-gh-actions==3.1.3"
]

[project.urls]
Home = "https://github.com/wagtail-nest/wagtail-polymath"
"Bug Tracker" = "https://github.com/wagtail-nest/wagtail-polymath/issues"

[tool.flit.module]
name = "wagtail_polymath"

[tool.flit.sdist]
exclude = [
    "wagtail_polymath/static_src",
    "wagtail_polymath/test",
    "wagtail_polymath/static/wagtail_polymath/js/.gitignore",
    "testmanage.py",
    ".*",
    "*.js",
    "*.json",
    "*.ini",
    "*.yml"
]
